# ML

./: ML_1.ipynb  ML_exercise_2.ipynb  ML_exercise_3.ipynb  ML_exercise_4.ipynb  ML_exercise_5.ipynb  ML_exercise_6.html  ML_exercise_6.ipynb  ML_exercise_7.ipynb  ML_exercise_8.ipynb  pyproject.toml  torch-tutorial.ipynb
.ipynb_checkpoints/: ML_1-checkpoint.ipynb  ML_exercise_2-checkpoint.ipynb
